[project]
name = "plex-tools"
version = "0.1.0"
description = "misc tools for managing Plex"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2.3",
    "configargparse==1.7.0",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.3",  # linter, formatter, import sort
    "mypy==1.13.0",
    "colorlog==6.9.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["*"]  # This includes all Python packages

[tool.ruff]
fix = true
line-length = 179
target-version = "py312"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear,
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
ignore = ["ANN002", "ANN003", "ANN204", "ANN202", "RUF012"]
# logger-objects = ["logging_setup.logger"]  # needs setup 
fixable=["ALL"]
extend-select = ["E501"]

[tool.ruff.lint.per-file-ignores]


[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
mypy-init-return = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[lint]
select = ["I002", "TCH004"]

[lint.isort]
required-imports = ["from __future__ import annotations"]

